[package]
name = "lc_mods"
version = "1.0.2"
edition = "2021"

[[bin]]
name = "LcMods"
path = "src/main.rs"

[profile.release]
opt-level = "s"
strip = "symbols"
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
zip = { version = "0.6", default-features = false, features = ["zstd"] }

[build-dependencies]
walkdir = "2.5"
zip = { version = "0.6", default-features = false, features = ["zstd"] }
