[package]
name = "lc_mods"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "LcMods"
path = "src/main.rs"

[profile.release]
opt-level = "s"
strip = "symbols"
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1.0.86"
bitvec = "1.0.1"
crossterm = "0.27.0"
ratatui = { version = "0.26.3", features = ["all-widgets"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
zip = { version = "0.6", default-features = false, features = ["zstd"] }

[dependencies.windows]
version = '0.57'
features = [
    'Win32_Storage_FileSystem',
]

[build-dependencies]
walkdir = "2.5"
zip = { version = "0.6", default-features = false, features = ["zstd"] }
